--- a/styles/question.css
+++ b/styles/question.css
@@ -382,9 +382,8 @@
 .h5p-theme .h5p-question-evaluation-container.evaluation-mode {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  background-color: var(--alternative-base);
+  background-color: var(--alternative-light);
   margin-top: var(--spacing-m);
-
   transition: height 0.15s ease, opacity 0.05s ease-in;
 }
 
@@ -428,31 +427,33 @@
 }
 
 .h5p-theme .h5p-theme-primary-cta {
-  padding: var(--spacing-s) calc(var(--spacing-l));
+  padding: var(--spacing-xs) calc(var(--spacing-l));
   background-color: var(--main-cta-base);
   color: var(--contrast-cta);
   border-radius: var(--border-radius-medium);
   cursor: pointer;
   font-size: var(--font-size-l);
-
+  border: solid 3px var(--main-cta-base);
   transition: all 0.1s linear 0s;
   transition-property: text-indent, padding;
 }
 
 .h5p-theme .h5p-theme-primary-cta:hover {
-  padding: var(--spacing-s) calc(var(--spacing-l) - 0.75em);
+  padding: var(--spacing-xs) calc(var(--spacing-l) - 0.75em);
   background-color: var(--main-cta-light);
+  border-color: var(--main-cta-light);
 }
 
 .h5p-theme .h5p-theme-primary-cta:active {
   background-color: var(--main-cta-dark);
+   border-color: var(--main-cta-dark);
 }
 
 .h5p-theme .h5p-theme-secondary-cta {
   background-color: var(--ui-base);
   color: var(--main-cta-base);
   border-radius: var(--border-radius-medium);
-  border: solid 3px var(--main-cta-base);
+  border: solid 3px var(--main-cta-base) !important;
   padding: var(--spacing-xs) var(--spacing-s);
   font-size: var(--font-size-l);
 
@@ -486,7 +487,7 @@
 
 .h5p-theme .h5p-pattern-container {
   position: relative;
-  height: var(--spacing-m);
+  height: var(--spacing-s);
   background-color: var(--alternative-light);
   transition: height 0.15s ease, opacity 0.15s cubic-bezier(0,1,0,1);
 }
@@ -512,7 +513,7 @@
 }
 
 .h5p-theme .h5p-joubelui-score-bar-star-shadow {
-  /*fill: var(--contrast-cta-light);*/
+  fill: var(--ui-base);
 }
 
 .h5p-theme .h5p-joubelui-score-bar-progress-wrapper {
@@ -542,6 +543,7 @@
   width: 1.923076923em;
   height: calc(1.923076923em * 0.638297872);
   border-radius: 5px;
+  scale: 1.2;
 }
 
 .h5p-theme .h5p-question-plus-one-container {
