--- a/styles/explainer.css
+++ b/styles/explainer.css
@@ -78,3 +78,33 @@
 .h5p-question-explanation-list::-webkit-scrollbar-thumb {
   background-color: #e0e0e0;
 }
+
+/* H5P THEME */
+
+.h5p-theme .h5p-question-explanation-container{
+  background-color: var(--alternative-light);
+  margin-top: var(--spacing-m);
+  margin-bottom: calc(var(--spacing-m)* -1);
+  padding: var(--spacing-m) ;
+  color: var(--text-secondary);
+}
+.h5p-theme .h5p-question-explanation-list{
+  background-color: var(--alternative-light);
+  border-color: var(--stroke-1);
+  border-radius: var(--border-radius-medium);
+}
+.h5p-theme .h5p-question-explanation-text, .h5p-theme .h5p-question-explanation-item:not(:last-child){
+    border-color: var(--stroke-1);
+}
+
+.h5p-theme .h5p-question-explanation-correct{
+  color: var(--feedback-correct-main);
+}
+
+.h5p-theme .h5p-question-explanation-wrong{
+  color: var(--feedback-incorrect-main);
+}
+.h5p-theme .h5p-question-explanation-correct, .h5p-question-explanation-wrong{
+  font-size: var(--font-size-m);
+}
+.h5p-question-explanation-title
