--- a/styles/question.css
+++ b/styles/question.css
@@ -378,7 +378,6 @@
 
 .h5p-theme .h5p-question-evaluation-container {
   padding: var(--h5p-theme-spacing-m);
-  padding-top: var(--h5p-theme-spacing-s);
   opacity: 1;
 }
 
@@ -525,6 +524,14 @@ body:has(.h5p-theme .h5p-question-evaluation-container.evaluation-mode) .h5p-jou
   border-color: var(--h5p-theme-main-cta-base);
   color: var(--h5p-theme-contrast-cta);
   cursor: pointer;
+}
+
+.h5p-theme .h5p-theme-secondary-cta:focus, 
+.h5p-theme .h5p-theme-primary-cta:focus {
+  z-index: 3000;
+  outline: 2px ridge var(--h5p-theme-main-cta-base);
+  border-radius: 4px;
+  outline-offset: 2px;
 }
 
 .h5p-theme .h5p-theme-secondary-cta:active {
