--- a/styles/question.css
+++ b/styles/question.css
@@ -555,6 +555,12 @@ body:has(.h5p-theme .h5p-question-evaluation-container.evaluation-mode) .h5p-jou
   box-shadow: 1px 2px 0px 0px rgba(0, 0, 0, 0.05);
 }
 
+.h5p-theme .h5p-question-image-scalable:focus:before {
+  z-index: 3000;
+  outline: 2px ridge var(--h5p-theme-main-cta-base);
+  outline-offset: 2px;
+}
+
 .h5p-theme .h5p-question-image-fill-width .h5p-question-image-scalable:before {
   content: "\e91a";
 }
