--- a/styles/question.css
+++ b/styles/question.css
@@ -388,6 +388,12 @@
   transition: height 0.15s ease, opacity 0.05s ease-in;
 }
 
+/* If no children, or only empty child containers */
+.h5p-theme .h5p-question-evaluation-container:empty,
+.h5p-theme .h5p-question-evaluation-container:not(.h5p-question-buttons):has(.h5p-question-feedback:empty):has(.h5p-question-scorebar:empty) {
+  padding: 0;
+}
+
 /* BREAK FEEDBACK INTO 3 LINES WHEN INSIDE SINGLE CHOICE SET */
 
 .h5p-theme.h5p-single-choice-set .h5p-question-evaluation-container.evaluation-mode{
