Adding .h5p-theme prefix
Adding .h5p-theme to ensure changes from the previous commit does not affect all content but only the content with the new theme applied

--- a/styles/question.css
+++ b/styles/question.css
@@ -281,9 +281,9 @@
   margin: 0;
   z-index: 3;
   background-color: white;
-  box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.3);
-  border-radius: var(--h5p-theme-border-radius-medium);
-  padding: var(--h5p-theme-spacing-m);
+  box-shadow: 0px 0px 7px 0px rgba(0, 0, 0, 0.59);
+  border-radius: 1em;
+  padding: 1.5em;
   transition: none;
 }
 
@@ -319,24 +319,11 @@
 }
 
 .h5p-question-feedback.h5p-question-popup .h5p-question-feedback-close:before {
-  position: absolute;
-  top: 0.5em;
-  right: 0.5em;
-  border: 1px solid transparent;
-  border-radius: 50%;
-  font-size: 0.7em;
-  padding: 0.8em;
-  cursor: pointer;
-  background-color: var(--h5p-theme-ui-base);
-  transition: box-shadow 0.3s, border-color 0.3s;
-  content: '\e910';
-  color: var(--h5p-theme-text-primary);
-  font-family: 'h5p-theme';
-}
-
-
-.h5p-question-feedback.h5p-question-popup .h5p-question-feedback-close:hover{
-  background-color: var(--h5p-theme-alternative-base);
+  font-family: 'h5pFontIcons';
+  font-size: 2.5em;
+  line-height: 0.9em;
+  content: '\e600';
+  color: #707070;
 }
 
 .h5p-question-feedback-tail {
@@ -680,6 +667,30 @@
   -webkit-transform: unset;
   transform: unset;
   margin-bottom: 0px;
+}
+
+.h5p-theme .h5p-question-feedback.h5p-question-popup .h5p-question-feedback-close:before {
+  position: absolute;
+  top: 0.5em;
+  right: 0.5em;
+  border: 1px solid transparent;
+  border-radius: 50%;
+  font-size: 0.7em;
+  padding: 0.8em;
+  cursor: pointer;
+  background-color: var(--h5p-theme-ui-base);
+  transition: box-shadow 0.3s, border-color 0.3s;
+  content: '\e910';
+  color: var(--h5p-theme-text-primary);
+  font-family: 'h5p-theme';
+}
+.h5p-theme .h5p-question-feedback.h5p-question-popup .h5p-question-feedback-close:hover{
+  background-color: var(--h5p-theme-alternative-base);
+}
+.h5p-theme .h5p-question-feedback.h5p-question-popup {
+  box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.3);
+  border-radius: var(--h5p-theme-border-radius-medium);
+  padding: var(--h5p-theme-spacing-m);
 }
 
 /* Remove theme background elements when "Transparent" is on */
